--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -35,7 +35,7 @@
         <h1 class="text-center">Disaster Response Project</h1>
         <p class="text-center">Analyzing message data for disaster response</p>
         <hr />
-      
+
         <div class="row">
             <div class="col-lg-12 form-group-lg">
                 <form action="/go" method="get">
@@ -60,7 +60,7 @@
     {% endblock %}
 
     {% for id in ids %}
-        <div id="{{id}}"></div>
+        <div id="{{id}}" class='center'></div>
     {% endfor %}
 </div>
 
